--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <div class="card col-2">
             <div>
                 <span class="badge">DISPONIBLE PARA TRABAJAR 🟢</span>
-                <h1 class="glitch-text">TU NOMBRE</h1>
+                <h1 class="glitch-text">BENJA</h1>
                 <p style="margin-top: 10px; font-size: 1.1rem; color: #ccc;">
                     Visuales que suenan. Editor VFX & 3D Artist.
                 </p>
@@ -162,7 +162,7 @@
         </div>
 
         <div class="card" style="justify-content: center; align-items: center; text-align: center;">
-            <h2 style="font-size: 2.5rem; color: var(--accent);">+50</h2>
+            <h2 style="font-size: 2.5rem; color: var(--accent);"></h2>
             <p>Proyectos Editados</p>
         </div>
 
@@ -186,3 +186,4 @@
 
 </body>
 </html>
+
