--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         /* --- EFECTO GLITCH EN HOVER --- */
         .glitch-text:hover {
-            animation: glitch-anim 0.3s infinite;
+            animation: glitch-anim 1.3s infinite;
             color: var(--accent);
             cursor: default;
         }
@@ -147,7 +147,7 @@
 
         <div class="card col-2 row-2" style="background: #000; padding: 0; border: none;">
             <div class="video-wrapper">
-                <iframe src="https://www.youtube.com/embed/VIDEO_ID_SHOWREEL?controls=0&modestbranding=1" title="Showreel"></iframe>
+                <iframe src="https://www.youtube.com/embed/https://youtu.be/8dB_WYUcQSY?si=b9kE85yag6eHO8uc" title="Showreel"></iframe>
             </div>
         </div>
 
@@ -186,4 +186,5 @@
 
 </body>
 </html>
+
 
