--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
         <div class="card col-2 row-2" style="background: #000; padding: 0; border: none;">
             <div class="video-wrapper">
-                <iframe src="https://www.youtube.com/embed/VIDEO_ID_SHOWREEL?controls=8dB_WYUcQSY" title="Showreel"></iframe>
+                <iframe src="https://www.youtube.com/embed/8dB_WYUcQSY" title="Showreel"></iframe>
             </div>
         </div>
 
@@ -186,5 +186,6 @@
 
 </body>
 </html>
+
 
 
